# Xline

./: Cargo.toml  Cross.toml  README.md  xline_server.conf
.config/: nextest.toml
.github/workflows/: ci.yml
ci/: Dockerfile
crates/curp/: Cargo.toml
crates/utils/: Cargo.toml
crates/xline/: Cargo.toml
crates/xlineapi/: Cargo.toml
curp/: Cargo.toml
curp-extapi/: Cargo.toml
curp-extapi/src/: cmd.rs  lib.rs  log_index.rs
curp-external-api/: Cargo.toml
curp-external-api/src/: cmd.rs
curp-test-utils/: Cargo.toml
curp-test-utils/src/: test_cmd.rs
curp-testutils/: Cargo.toml
curp-testutils/src/: lib.rs  test_cmd.rs
curp/proto/: message.proto
curp/src/: client.rs  error.rs  lib.rs  log_entry.rs  members.rs  response.rs  snapshot.rs
curp/tests/: read_state.rs  server.rs  server_election.rs  server_recovery.rs
engine/src/: lib.rs  memory_engine.rs  mock_rocksdb_engine.rs  proxy.rs  rocksdb_engine.rs
scripts/: Dockerfile  benchmark.sh  quick_start.sh  validation_test.sh
simulation/: Cargo.toml
simulation/src/: curp_group.rs  lib.rs  xline_group.rs
utils/: Cargo.toml
utils/src/: config.rs  lib.rs  shutdown.rs
workspace-hack/: Cargo.toml
xline/: Cargo.toml
xline-client/: Cargo.toml  README.md
xline-client/examples/: error_handling.rs  kv.rs  maintenance.rs  watch.rs
xline-client/src/: error.rs  lease_gen.rs  lib.rs
xline-client/tests/: auth.rs  kv.rs  lease.rs  lock.rs  maintenance.rs  watch.rs
xline-discovery/: Cargo.toml
xline-discovery/src/: client.rs  host.rs  lib.rs  register.rs  service.rs
xline-discovery/tests/: registration.rs
xline-test-utils/src/: lib.rs
xline/src/: header_gen.rs  lib.rs  main.rs  revision_check.rs  revision_number.rs  state.rs
xlineapi/: Cargo.toml
xlinectl/: Cargo.toml  README.md
xlinectl/src/: error.rs  main.rs
xlinectl/src/command/: delete.rs  get.rs  lock.rs  mod.rs  put.rs  snapshot.rs  txn.rs  watch.rs
xlinectl/src/command/auth/: disable.rs  enable.rs  status.rs
xlinectl/src/command/lease/: grant.rs  keep_alive.rs  list.rs  revoke.rs  timetolive.rs
xlinectl/src/command/role/: add.rs  delete.rs  get.rs  grant_perm.rs  list.rs  revoke_perm.rs
xlinectl/src/command/user/: add.rs  delete.rs  get.rs  grant_role.rs  list.rs  passwd.rs  revoke_role.rs
xlinectl/src/utils/: macros.rs  mod.rs  printer.rs
(+188 files in other folders)
