[package]
name = "curp-extapi"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/datenlord/Xline/tree/master/curp-extapi"
description = "Curp extend interface"
license = "Apache-2.0"
readme = "README.md"
categories = ["API"]
keywords = ["API", "Curp"]

[dependencies]
engine = { path = "../engine" }
async-trait = "0.1.53"
mockall = "0.11.3"
serde = { version = "1.0.130", features = ["derive", "rc"] }
