[package]
name = "xlinectl"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
repository = "https://github.com/datenlord/Xline/tree/master/xlinectl"
description = "Command line client for Xline"
license = "Apache-2.0"
readme = "README.md"
categories = ["Client"]
keywords = ["Client", "CommandLine"]

[dependencies]
xline = { path = "../xline" }
xline-client = { path = "../xline-client" }
xlineapi = { path = "../xlineapi" }
utils = { path = "../utils" }
clap = { version = "4.3.2", features = ["derive", "string"] }
tokio = { version = "1", features = ["rt", "signal"] }
itertools = "0.10.5"
async-trait = "0.1.68"
thiserror = "1.0.37"
tonic = "0.8.3"
